fixed the issue with the button alignment. the buttons were hanging off the side of the pictures after a certain @media. I fixed this using the simple right:px; and left:npx; in css.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,7 +173,7 @@ footer {
     overflow: auto;
     position: relative;
     float: left;
-    margin: 20px 0 25px;
+    margin: 25px 0 25px;
 }
 
 .work:nth-child(even) {
@@ -183,6 +183,7 @@ footer {
 .work img {
     width: 75%;
     border: 0 none;
+
     /* opacity: .8; */
 }
 
@@ -298,6 +299,19 @@ input[type=submit] {
         width: 50%;
     }
 
+    #projects a {
+        display: inline-block;
+        position: static;
+
+    }
+
+    h3 {
+        right: 32px;
+
+    }
+
+
+
 
 }
 
@@ -339,6 +353,38 @@ input[type=submit] {
     #projects {
         text-align: center;
     }
+
+    #projects a {
+        display: inline-block;
+        position: static;
+
+    }
+
+    h3 {
+        right: 32px;
+
+    }
+}
+
+@media only screen and (max-width: 690px) {
+    h3 {
+        right: 30.5px;
+
+    }
+}
+
+@media only screen and (max-width: 660px) {
+    h3 {
+        right: 29px;
+
+    }
+}
+
+@media only screen and (max-width: 640px) {
+    h3 {
+        right: 27px;
+
+    }
 }
 
 @media only screen and (max-width: 640px) {
@@ -372,6 +418,12 @@ input[type=submit] {
         width: 0;
         padding-left: 0;
         margin-left: 0;
+    }
+
+
+    h3 {
+        left: 66px;
+
     }
 
     /* h3 {
